better fix for too long slide-titles (now do not break drag and drop)

--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -26,4 +26,6 @@ ol#slides .slide .title
 ol#slides .slide .select-beamers
 	{display:block; float:left;}
 ol#slides .slide .options
-	{display:block;}
+	{display:block; float:left;}
+ol#slides .slide .fixFloat
+	{display:block; clear:left;}
